added support for open api

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ AUTH0_CLIENT_SECRET=your-client-secret
 SERVER_BASE_URL=https://localhost:8080
 AUTH0_DOMAIN=your-domain.auth0.com
 AUTH0_AUDIENCE=https://your-domain.auth0.com
+OPENAPI_BASE_URL=https://api.example.com/openapi.json
+OPENAPI_BASE_URL=https://api.example.com
