--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ AUTH0_CLIENT_ID=your-client-id
 AUTH0_CLIENT_SECRET=your-client-secret
 SERVER_BASE_URL=http://localhost:8000
 AUTH0_DOMAIN=your-domain.auth0.com
-AUTH0_AUDIENCE=https://your-domain.auth0.com
+AUTH0_AUDIENCE=https://your-audience-path
 OPENAPI_BASE_URL=https://api.example.com/openapi.json
 OPENAPI_BASE_URL=https://api.example.com
